--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,18 @@
 </ion-header>
 
 <ion-content padding>
+<ion-card>
+  <ion-card-header>
+    Choose Item
+  </ion-card-header>
+  <ion-list>
+  <button ion-item>
+      <ion-icon name="person"></ion-icon> รายชื่อ
+  </button>
 
+  <button ion-item>
+      <ion-icon name="person-add"></ion-icon> เพิ่มรายชื่อ
+  </button>
+  </ion-list>
+</ion-card>
 </ion-content>
