--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,12 +4,12 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  
-  <p>Kiartisak</p>
-</ion-content>
+    <ion-content padding class="card-background-page">
+      <ion-card>
+        <img src="assets/imgs/115.jpg" alt="">
+        <div class="card-title">
+          Hello
+    
+        </div>
+      </ion-card>
+    </ion-content>
